# JiaWei_bot

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: .env.example  openclaw.json.example
docs/: CLEANUP_REPORT.md  MIGRATION_GUIDE.md  MIGRATION_REPORT.md  PROJECT_STRUCTURE.md
scripts/: migrate.py
src/feishu_ai_bot/: __init__.py  _version.py  cli.py  config.py  server.py
src/feishu_ai_bot/ai/: __init__.py  processor.py
src/feishu_ai_bot/bot/: __init__.py  feishu.py
src/feishu_ai_bot/cards/: __init__.py  builder.py
src/feishu_ai_bot/monitoring/: __init__.py  stats.py
src/feishu_ai_bot/openclaw/: __init__.py  bridge.py
src/feishu_ai_bot/security/: __init__.py  validator.py
src/feishu_ai_bot/tasks/: __init__.py  processor.py
tests/: conftest.py
tests/unit/: test_config.py  test_openclaw_bridge.py
